--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>MyResume Bootstrap Template - Index</title>
+  <title>Meu Resumo - Index</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -46,11 +46,11 @@
     <nav id="navbar" class="navbar nav-menu">
       <ul>
         <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-        <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
+        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Sobre</span></a></li>
+        <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resumo</span></a></li>
         <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-        <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
-        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+        <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Serviços</span></a></li>
+        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contato</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
@@ -270,8 +270,8 @@
           </div>
           <br>
           <br>
-          <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
-            In English
+          <button type="button" class="btn btn-segundary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Objetivo de estudo
           </button>
           <!-- Modal -->
           <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -282,12 +282,12 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                   </div>
                   <div class="modal-body">
-                    My name is Fellipe Manaia Iannaccaro Maziero, I am an ambitious person and I can work as a team quietly,I work with both Photoshop and VSCode and the EDG system (Word, Powerpoint, Excel). I intend orpursue a career in Informatics or work with Actuarial Sciences. 
+                    Meu sonho de estudo é estudar ciência de dados e virar poliglotá.
                     <br>
-                    Press Tab than press or space or enter to exit.(Pressione Tab e depois pressione espaço ou enter para sair.)
+                    Aperte ESC.
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-segundary" data-bs-dismiss="modal">Close</button>
                   </div>
                 </div>
               </div>
@@ -378,8 +378,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>Minhas aulas</h2>
         </div>
 
         <div class="row">
@@ -392,8 +391,7 @@
                 </svg>
                 <i class="bx bxl-dribbble"></i>
               </div>
-              <h4><a href="">Lorem Ipsum</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <h4><a href="">Fundamentos da informática</a></h4>
             </div>
           </div>
 
@@ -405,8 +403,7 @@
                 </svg>
                 <i class="bx bx-file"></i>
               </div>
-              <h4><a href="">Sed Perspiciatis</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <h4><a href="">Programção e algoritmo</a></h4>
             </div>
           </div>
 
@@ -418,8 +415,7 @@
                 </svg>
                 <i class="bx bx-tachometer"></i>
               </div>
-              <h4><a href="">Magni Dolores</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <h4><a href="">Interface Web</a></h4>
             </div>
           </div>
 
@@ -431,8 +427,7 @@
                 </svg>
                 <i class="bx bx-layer"></i>
               </div>
-              <h4><a href="">Nemo Enim</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+              <h4><a href="">Gestão de conteudo web</a></h4>
             </div>
           </div>
 
@@ -444,8 +439,7 @@
                 </svg>
                 <i class="bx bx-slideshow"></i>
               </div>
-              <h4><a href="">Dele Cardo</a></h4>
-              <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+              <h4><a href="">Banco de dados</a></h4>
             </div>
           </div>
 
@@ -457,8 +451,7 @@
                 </svg>
                 <i class="bx bx-arch"></i>
               </div>
-              <h4><a href="">Divera Don</a></h4>
-              <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+              <h4><a href="">Arte Digital</a></h4>
             </div>
           </div>
 
@@ -482,7 +475,7 @@
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
                 <h3>Fellipe Manaia</h3>
-                <h4>Amigo de escola</h4>
+                <h4>Estudante</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   Uma pessoa ótima no que faz, dedicado e não se contenta com o simples, aprende rápido e sempre da seu melhor, trabalha em equipe e sempre procura melhorar
@@ -494,11 +487,11 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
+                <h3>Giovanni Caramello</h3>
+                <h4>Estudante</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  Você é um incrível amigo e um brilhante programador, desenvolveu muito bem tanto na área das softs skills quanto nas hard skills.. que você tenha um grande futuro pelo a sua frente e também tudo de bom e de melhor para você.                 
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -507,11 +500,11 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
+                <h3>Gabriel Rolim</h3>
+                <h4>Estudante</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                  Breno Miguel um belo amigo de trabalho e na vida, sempre esta correndo atrais das coisas para adiantar tudo, e muito bom trabalhar com este ja que sempre esta aberto a ouvir novas opiniões e so tem a acrescentar no trabalho!!!
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
