--- a/index.html
+++ b/index.html
@@ -270,28 +270,11 @@
           </div>
           <br>
           <br>
-          <button type="button" class="btn btn-segundary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+          <button type="button" class="btn-btn-segundary" data-bs-toggle="modal" data-bs-target="#exampleModal">
             Objetivo de estudo
           </button>
           <!-- Modal -->
-          <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-               <div class="modal-content">
-                  <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">More information about me</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                  </div>
-                  <div class="modal-body">
-                    Meu sonho de estudo é estudar ciência de dados e virar poliglotá.
-                    <br>
-                    Aperte ESC.
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-segundary" data-bs-dismiss="modal">Close</button>
-                  </div>
-                </div>
-              </div>
-            </div>
+
         </div>
       </div>
       <br>
@@ -499,7 +482,7 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
+                <img src="assets/img/rolim.jpg" class="testimonial-img" alt="">
                 <h3>Gabriel Rolim</h3>
                 <h4>Estudante</h4>
                 <p>
@@ -636,6 +619,24 @@
         Edited my Breno Miguel.
       </div>
     </div>
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+         <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">More information about me</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              Meu sonho de estudo é estudar ciência de dados e virar poliglota.
+              <br>
+              Aperte ESC.
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btnbtn-segundary" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
   </footer><!-- End Footer -->
 
   <div id="preloader"></div>
